@@ -2468,4 +2468,8 @@
 	  this is little more than a "skeleton" file.
 	* Various files:  CAN ISO-11783 support contributed by Gary Teravskis.
 	* net/recv.c and net/recvfrom.c: Correct a bug in return value:  The the peer
-	  gracefully closes the connections, needs to return zero and not ENOTCONN
+	  gracefully closes the connections, needs to return zero and not ENOTCONN.
+	* arch/arm/src/stm32/stm32_eth.c:  Fix an error in the STM32 ethernet driver.
+	  The received buffer size must be two bytes larger to account for the two byte
+	  checksum that is appended to the packet.  Otherwise, the last two bytes of
+	  real data in the packet will get clobbered.
